@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2015, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,8 +27,11 @@ package sun.nio.fs;
 
 import java.nio.file.*;
 import java.nio.file.attribute.*;
+import java.nio.channels.*;
 import java.util.*;
 import java.io.IOException;
+import java.security.AccessController;
+import java.security.PrivilegedAction;
 
 /**
  * Base implementation of FileStore for Unix/like implementations.
@@ -120,12 +123,6 @@ abstract class UnixFileStore
     public long getUsableSpace() throws IOException {
        UnixFileStoreAttributes attrs = readAttributes();
        return attrs.blockSize() * attrs.availableBlocks();
-    }
-
-    @Override
-    public long getBlockSize() throws IOException {
-       UnixFileStoreAttributes attrs = readAttributes();
-       return attrs.blockSize();
     }
 
     @Override
@@ -221,17 +218,12 @@ abstract class UnixFileStore
     /**
      * Returns status to indicate if file system supports a given feature
      */
-    // BEGIN Android-changed: fstypes properties file is not used on Android.
-    FeatureStatus checkIfFeaturePresent(String feature) {
-        return FeatureStatus.UNKNOWN;
-    }
-    /*
     FeatureStatus checkIfFeaturePresent(String feature) {
         if (props == null) {
             synchronized (loadLock) {
                 if (props == null) {
                     props = AccessController.doPrivileged(
-                        new PrivilegedAction<>() {
+                        new PrivilegedAction<Properties>() {
                             @Override
                             public Properties run() {
                                 return loadProperties();
@@ -261,16 +253,14 @@ abstract class UnixFileStore
 
     private static Properties loadProperties() {
         Properties result = new Properties();
-        String fstypes = StaticProperty.javaHome() + "/lib/fstypes.properties";
-        Path file = Path.of(fstypes);
+        String fstypes = System.getProperty("java.home") + "/lib/fstypes.properties";
+        Path file = Paths.get(fstypes);
         try {
             try (ReadableByteChannel rbc = Files.newByteChannel(file)) {
-                result.load(Channels.newReader(rbc, UTF_8.INSTANCE));
+                result.load(Channels.newReader(rbc, "UTF-8"));
             }
         } catch (IOException x) {
         }
         return result;
     }
-    */
-    // END Android-changed: fstypes properties file is not used on Android.
 }
